--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -29,7 +29,7 @@
         </md-toolbar>
 
         <md-content>
-            <ng-view></ng-view>
+            <ui-view></ui-view>
         </md-content>
 
     </div>
