--- a/src/style.scss
+++ b/src/style.scss
@@ -2,9 +2,8 @@
     font-family: 'Material Icons';
     font-style: normal;
     font-weight: 400;
-    src: url(material-icons.woff2) format('woff2'),
+    src: url(./assets/material-icons.woff2) format('woff2'),
 }
-
 
 .material-icons {
     font-family: 'Material Icons';
@@ -20,7 +19,11 @@
     direction: ltr;
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
-  }
+}
+
+[ng-cloak] {
+    display: none !important;
+}
 
 .splash {
     display: none;
@@ -29,9 +32,3 @@
 [ng-cloak].splash {
     display: block !important;
 }
-
-// md-list.menu {
-//     md-list-item {
-//         padding:0;
-//     }
-// }
