Updated Packages and Webpack
- Updated node packages
- Updated Webpack file
- added Chunk for app and vendor bundles
- replaced awesomTypescriptLoader with tsLoader
- added miniCssExtractPlugin
- added cleanWebpack for clean dist folder

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -6,7 +6,7 @@
             </md-card-title-text>
         </md-card-title>
         <md-card-content>
-            <md-button class="md-raised md-primary">
+            <md-button class="md-raised md-primary" ng-click="$ctrl.testClick()">
                 some button
             </md-button>
         </md-card-content>
